Change open source license to MIT license.

--- a/META-INF/mods.toml
+++ b/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="lowcodefml"
 loaderVersion="[40,)"
-license="All Rights Reserved"
+license="MIT license"
 
 [[mods]]
 modId="futurepack_additions"
