Fix bug not recognized by Forge Client

--- a/META-INF/mods.toml
+++ b/META-INF/mods.toml
@@ -1,17 +1,25 @@
 modLoader="lowcodefml"
-loaderVersion="[40]"
+loaderVersion="[40,]"
 license="MIT license"
 
 [[mods]]
 modId="futurepack_additions"
-version="1.0"
+version="1.1"
 displayName="Futurepack Additions"
 logoFile="pack.png"
 authors="Xia_Xin,YuapixN"
 
+[dependencies]
 [[dependencies.futurepack_additions]]
-    modId="minecraft"
-    mandatory=true
-    versionRange="[1.18.2]"
-    ordering="NONE"
-    side="BOTH"
+modId = "forge"
+mandatory = true
+versionRange = "[40,]"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.futurepack_additions]]
+modId = "minecraft"
+mandatory = true
+versionRange = "[1.18.2]"
+ordering = "NONE"
+side = "BOTH"
